--- a/Index.html
+++ b/Index.html
@@ -26,7 +26,7 @@
 <body>
     <!-- Navigation Menu -->
     <header>
-        <h1 class="logo">Sunrise School</h1>
+        <h1 class="logo">Iskuulka Sunrise</h1>
         <nav>
             <ul class="nav-links">
                 <li><a href="#home">Home</a></li>
